@@ -1,6 +1,8 @@
 * Thu Sep 1 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2~dev
   In the build recipe, (1) set pkgconfigdir properly for 64-bit Fedora systems,
   (2) clean up various derived files including *.pyc on scons -c.
+  The packet sniffer now accepts NMEA packets with the ECDIS packet
+  leader 'EC'.
 
 * Sun Aug 28 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.1
   The Irene release, rocking you like a hurricane and brought to you
